
0.6, in progress:

  * More properties/methods for TargetData (Florian Noding) (Issue #16).
  * Value.uses API.
  * Fetch operands of instructions (Seth Warn).
  * Unaliased objects (with Seth Warn).
  * Value factory, more Constant subclasses.
  * Module.link_in and Instruction.is_volatile (Seth Warn).
  * Fix Builder.position_at_beginning crash (Issue #10).
  * Builds on gentoo.
  * Code cleanup.
  * Migrate to LLVM 2.5.


0.5, 22-Nov-2008:

  * Added vicmp, vfcmp instructions and constant expressions.
  * Builds on FreeBSD.
  * Updated documentation.
  * Migrate to LLVM 2.4.


0.4, 21-Nov-2008:

  * Code cleanup, added license headers.
  * Added llvm.core.load_library_permanently() (Issue #12).
  * Fix comparison using != (Issue #11).
  * Instruction.is_terminator added.
  * Fix Builder.select (Paulo Silva).
  * Added viewCFG methods to Function (Paulo Silva).


0.3, 8-Sep-2008:

  * Passes added.
  * Assembly support: create modules from .ll files.
  * Various bug fixes.
  * Bitcode support: convert modules to bitcode and vice versa.
  * Intrinsics added.
  * JIT Tutorials ported (Sebastien Binet).
  * GenericValue added. Used by ExecutionEngine.run().
  * Build cleanly on OpenBSD, x86-64/amd64 (Laurence Tratt).
  * Updated documentation.


0.2.1, 18-Jun-2008:

  * Build cleanly with LLVM 2.3 and 2.3svn.


0.2, 15-Jun-2008:

  * Independent package, need not be unpacked into llvm/bindings.
  * Fixed ownership issues with Module/ModuleProvider.
  * Modules, values and types can be stringified, to get their LLVM
      assembly representation.
  * Modules and functions can be verified.
  * MemoryBuffer and TypeHandle are available.
  * ExecutionEngine, TargetData and passes are available.
  * Unit tester added (but doesn't test much for now).
  * Python doc string documentation added (still incomplete).
  * Many minor style/cosmetic changes and bug fixes.
  * Added documentation as on website into SVN.
  * Lots of cleanup.


0.1, 10-May-2008:
